design : html navbar

--- a/index.html
+++ b/index.html
@@ -12,18 +12,35 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
+
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <section>
-      <h1>페이지 타이틀</h1>
-    </section>
-
-    <section>
-      <div class="innerWrap">
-        <h2></h2>
-        <p></p>
+    <nav id="navbar">
+      <div class="navbar__logo">
+        <i class="fa-solid fa-house"></i>
+        <a href="#">Page</a>
       </div>
-    </section>
+      <div class="navbar__menu">
+        <ul>
+          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item">About</li>
+          <li class="navbar__menu__item">Skills</li>
+          <li class="navbar__menu__item">My works</li>
+          <li class="navbar__menu__item">Testimonial</li>
+          <li class="navbar__menu__item">Content</li>
+        </ul>
+      </div>
+    </nav>
+
+    <section id="about"></section>
+    <section id="skills"></section>
+    <section id="work"></section>
+    <section id="testimonials"></section>
+    <section id="content"></section>
   </body>
 </html>
