desgin : html-home section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
       </div>
     </nav>
 
-    <section id="about"></section>
+    <section id="home">
+      <img src="img/about.JPG" alt="logo" class="home__img" />
+      <h1 class="home__title">Page Practice</h1>
+      <h2 class="home__description">Page Practice & web</h2>
+      <button class="home__button">About Button</button>
+    </section>
+
     <section id="skills"></section>
     <section id="work"></section>
     <section id="testimonials"></section>
