design : html-about

--- a/index.html
+++ b/index.html
@@ -44,6 +44,52 @@
       <button class="home__button">About Button</button>
     </section>
 
+    <section id="about">
+      <h1>About</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error id
+        quibusdam inventore blanditiis facere laborum provident perspiciatis,
+        modi nulla dolorem officiis suscipit ut iste voluptatibus possimus dicta
+        officia! Quibusdam, consectetur.
+      </p>
+      <div class="about__main">
+        <div class="main">
+          <div class="main__icon">
+            <i class="fa-brands fa-react"></i>
+          </div>
+          <div class="main__title">Front-end</div>
+          <div class="main__description">
+            HTML,CSS, Javascript, Typescript, React JS, Next JS
+          </div>
+        </div>
+        <div class="main">
+          <div class="main__icon">
+            <i class="fa-brands fa-react"></i>
+          </div>
+          <div class="main__title">Front-end</div>
+          <div class="main__description">
+            HTML,CSS, Javascript, Typescript, React JS, Next JS
+          </div>
+        </div>
+        <div class="main">
+          <div class="main__icon">
+            <i class="fa-brands fa-react"></i>
+          </div>
+          <div class="main__title">Front-end</div>
+          <div class="main__description">
+            HTML,CSS, Javascript, Typescript, React JS, Next JS
+          </div>
+        </div>
+      </div>
+      <div class="about__works">
+        <div class="works">
+          <img src="./img/about.JPG" alt="practice" class="works__img" />
+          <p class="works__name">work name</p>
+          <p class="works__period">work period & work period</p>
+        </div>
+      </div>
+    </section>
+
     <section id="skills"></section>
     <section id="work"></section>
     <section id="testimonials"></section>
