design : html-skills

--- a/index.html
+++ b/index.html
@@ -90,7 +90,70 @@
       </div>
     </section>
 
-    <section id="skills"></section>
+    <section id="skills">
+      <h1>Skills</h1>
+      <h2>Skills & practice</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi
+        quibusdam provident doloribus doloremque dignissimos consectetur atque
+        esse nihil, hic eos sunt! Nesciunt veniam dolor, porro velit alias et ut
+        laudantium.
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">Skills</h3>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTMl</span>
+              <span>99%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTMl</span>
+              <span>99%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTMl</span>
+              <span>99%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tool__list">
+              <li><span>A</span></li>
+              <li><span>B</span></li>
+              <li><span>C</span></li>
+              <li><span>D</span></li>
+              <li><span>E</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li><span>A</span></li>
+              <li><span>B</span></li>
+              <li><span>C</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="work"></section>
     <section id="testimonials"></section>
     <section id="content"></section>
