design : html-works section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,93 @@
       </div>
     </section>
 
-    <section id="work"></section>
+    <section id="work">
+      <h1>Work</h1>
+      <h3>Projects</h3>
+      <div class="work_-categories">
+        <button class="category__btn">
+          All <span class="category__count">3</span>
+        </button>
+        <button class="category__btn">
+          Front <span class="category__count">3</span>
+        </button>
+        <button class="category__btn">
+          Back-end <span class="category__count">3</span>
+        </button>
+        <button class="category__btn">
+          Mobile <span class="category__count">3</span>
+        </button>
+      </div>
+
+      <div class="work__projects">
+        <a href="#" class="projects" target="blank">
+          <img
+            class="projects__img"
+            src="./img//projects/project1.png"
+            alt="1"
+          />
+          <div class="projects__description">
+            <h3>work projects1</h3>
+            <span>clone Coding with works</span>
+          </div>
+        </a>
+        <a href="#" class="projects" target="blank">
+          <img
+            class="projects__img"
+            src="./img//projects/project2.png"
+            alt="2"
+          />
+          <div class="projects__description">
+            <h3>work projects1</h3>
+            <span>clone Coding with works</span>
+          </div>
+        </a>
+        <a href="#" class="projects" target="blank">
+          <img
+            class="projects__img"
+            src="./img//projects/project3.png"
+            alt="3"
+          />
+          <div class="projects__description">
+            <h3>work projects1</h3>
+            <span>clone Coding with works</span>
+          </div>
+        </a>
+        <a href="#" class="projects" target="blank">
+          <img
+            class="projects__img"
+            src="./img//projects/project4.png"
+            alt="4"
+          />
+          <div class="projects__description">
+            <h3>work projects1</h3>
+            <span>clone Coding with works</span>
+          </div>
+        </a>
+        <a href="#" class="projects" target="blank">
+          <img
+            class="projects__img"
+            src="./img//projects/project5.png"
+            alt="5"
+          />
+          <div class="projects__description">
+            <h3>work projects1</h3>
+            <span>clone Coding with works</span>
+          </div>
+        </a>
+        <a href="#" class="projects" target="blank">
+          <img
+            class="projects__img"
+            src="./img//projects/project6.png"
+            alt="6"
+          />
+          <div class="projects__description">
+            <h3>work projects1</h3>
+            <span>clone Coding with works</span>
+          </div>
+        </a>
+      </div>
+    </section>
     <section id="testimonials"></section>
     <section id="content"></section>
   </body>
