design : html-testimonial section

--- a/index.html
+++ b/index.html
@@ -241,7 +241,45 @@
         </a>
       </div>
     </section>
-    <section id="testimonials"></section>
+
+    <section id="testimonials">
+      <h1>Testimonial</h1>
+      <h3>Practice</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img
+            src="./img//projects/project2.png"
+            alt="1"
+            class="testimonial__img"
+          />
+          <div class="testimonial__bubble">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit
+              deserunt, assumenda asperiores dolor ipsam nesciunt nihil eius ut
+              amet iste possimus facere beatae enim commodi velit quos, nemo
+              numquam blanditiis!
+            </p>
+            <p class="name"><a href="#">work</a> / practice</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <img
+            src="./img//projects/project5.png"
+            alt="2"
+            class="testimonial__img"
+          />
+          <div class="testimonial__bubble">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit
+              deserunt, assumenda asperiores dolor ipsam nesciunt nihil eius ut
+              amet iste possimus facere beatae enim commodi velit quos, nemo
+              numquam blanditiis!
+            </p>
+            <p class="name"><a href="#">work</a> / practice</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="content"></section>
   </body>
 </html>
