design : html-content section

--- a/index.html
+++ b/index.html
@@ -280,6 +280,19 @@
         </div>
       </div>
     </section>
-    <section id="content"></section>
+
+    <section id="content">
+      <h1 class="content__title"></h1>
+      <h2 class="content__title2"></h2>
+      <div class="content__links">
+        <a href="#">
+          <i class="fa-brands fa-react"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-square-js"></i>
+        </a>
+      </div>
+      <p class="content__rights">0000</p>
+    </section>
   </body>
 </html>
